<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/second_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:layout_height="30dp"
        android:text="@string/findText_chargeStation"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
    <TextView
        android:text="@string/latChargeStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/lat_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
    <TextView
        android:text="@string/longChargeStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/long_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/find_button"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:background="@drawable/transparent_bg_bordered2"
        android:text="@string/findBtn_chargeStation" />

</LinearLayout>