<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/backGround2"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/second_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/title_chargeStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            />
        <TextView
            android:id="@+id/title_View"
            android:layout_width="match_parent"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:layout_height="30dp"
            android:text="TextView" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/latChargeStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            />

        <TextView
            android:id="@+id/lat_View"
            android:textSize="20dp"
            android:layout_height="30dp"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:text="TextView" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/longChargeStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            />
        <TextView
            android:id="@+id/lon_View"
            android:layout_width="match_parent"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:layout_height="30dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/contactChargeStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            />
        <TextView
            android:id="@+id/telephone_View"
            android:layout_width="match_parent"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:layout_height="30dp"
            android:text="TextView" />
    </LinearLayout>

    <Button
        android:id="@+id/google_btn"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_bg_bordered_button"
        android:textColor="@color/textColor"
        android:text="@string/google_btn_chargeStation" />
    <Button
        android:id="@+id/like_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/transparent_bg_bordered_button"
        android:textColor="@color/textColor"
        android:text="@string/add_favorite_chargeStation" />

</LinearLayout>