<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewsMain">

    <TextView
        android:id="@+id/search_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="250dp"
        android:fontFamily="sans-serif"
        android:text="@string/search_tv"
        android:textSize="40dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/search_et"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:theme="@style/NewsTheme"
        android:layout_below="@+id/search_tv"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:drawableLeft="@drawable/search_icon"
        android:textColor="@color/cursorColor"
        android:hint="@string/search_et" />

    <TextView
        android:id="@+id/news_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_et"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="280dp"
        android:layout_marginTop="30dp"
        android:text="@string/news_tv"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/selected_news_list"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:layout_below="@+id/news_tv"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp" />


</RelativeLayout>